maze.lessons.maze.island.IslandMaze.scala.error
Escaper:15: error: not found: value Dirction
          setDirection(Dirction.NORTH)
                       ^Escaper:19: error: not found: value Dirction
        setDirection(Dirction.NORTH)
                     ^