maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit){
    var obstacle=false
    if(estFaceMur){
      droite()
      if(estFaceMur){
        droite()
        avance()
        gauche()
        if (estFaceMur){
          droite()
        }else{
          avance()
          setDirection(Dirction.NORTH)
        }
      }else{
        avance()
        setDirection(Dirction.NORTH)
      }
    }else{
      while(obstacle==false){
      	avance()
      }
    }
  }
  prendBiscuit()
}